--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,10 @@
         android:name=".Application">
 
         <activity
-            android:name=".MainActivity">
+            android:name=".MainActivity"
+            android:label="@string/activity_main_title">
 
-            <intent-filter android:label="@string/activity_main_title">
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
